<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10sdp"
    tools:context=".view.activities.AddUserActivity"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_user_add"
        android:textColor="@color/grey_900"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_name"
        android:textColor="@color/blue_grey_900"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_user_name"
        />

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints="@string/hint_user_name"
        android:hint="@string/hint_user_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_age"
        android:textColor="@color/blue_grey_900"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_age"
        app:layout_constraintTop_toTopOf="@+id/et_user_age"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_user_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_age"
        android:inputType="number"
        android:autofillHints="@string/hint_user_age"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/et_user_name"
        />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_phone"
        android:textColor="@color/blue_grey_900"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_phone"
        app:layout_constraintTop_toTopOf="@+id/et_user_phone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/et_user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_phone"
        android:inputType="phone"
        android:autofillHints="@string/hint_user_phone"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/et_user_age"
        />

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_sex"
        android:textColor="@color/blue_grey_900"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/radio_group"
        app:layout_constraintTop_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/et_user_phone"
        >
        <RadioButton
            android:id="@+id/rb_male"
            android:layout_weight="1"
            android:text="@string/radio_btn_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_weight="1"
            android:text="@string/radio_btn_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </RadioGroup>


    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_user"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />
</androidx.constraintlayout.widget.ConstraintLayout>