<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_user_name"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="@+id/tv_name_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            />

        <TextView
            android:id="@+id/tv_age_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_user_age"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_lbl"
            />

        <TextView
            android:id="@+id/tv_age_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="@+id/tv_age_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_age_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            />

        <TextView
            android:id="@+id/tv_phone_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lbl_user_phone"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_age_lbl"
            />

        <TextView
            android:id="@+id/tv_phone_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="@+id/tv_phone_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_phone_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            />

        <TextView
            android:id="@+id/tv_sex_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_user_sex"
            android:textColor="@color/blue_grey_900"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone_lbl"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_sex_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toTopOf="@+id/tv_sex_lbl"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sex_lbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>